[tool.poetry]
name = "dashboard_supermarket_sales"
version = "0.1.0"
description = ""
authors = ["marcusmariano <marcusney@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
dash = "2.6.2"
pandas = "1.5.0"
dash-bootstrap-components = "1.2.1"
dash-bootstrap-templates = "1.0.6"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
